# velocity-fl

./: CONTRIBUTING.md  IMPL.md  README.md  ROADMAP.md  pyproject.toml  zensical.toml
.claude/: skill-context.md
.github/: dependabot.yml
.github/workflows/: codspeed.yml  dependabot-auto-merge.yml  docs.yml  nightly.yml  pin-check.yml  tests.yml
docs/: api.md  architecture.md  attacks.md  benchmarks.md  cli.md  configuration.md  convergence.md  getting-started.md  index.md  leaderboard.md  mcp-apps.md  strategies.md  style.css
examples/: cifar10_fedavg_dirichlet.py  mnist_fedavg.py  mnist_fedavg_dp.py  mnist_fedprox_dirichlet.py  mnist_label_flipping_vs_robust.py  mnist_multikrum_vs_byzantine.py
overrides/partials/: copyright.html
python/velocity/: __init__.py  _core.pyi  archive.py  arena.py  cli.py  datasets.py  db.py  flows.py  mcp_app.py  memory.py  paper_attacks.py  partition.py  server.py  strategy.py  training.py
scripts/: dev.py  dump_attack_arena.py  dump_leaderboard_page.py
tests/: conftest.py  test_aggregation_properties.py  test_archive.py  test_arena.py  test_cli.py  test_complexity_labeller.py  test_convergence.py  test_datasets.py  test_db.py  test_leaderboard_page_in_sync.py  test_mcp_apps_doc.py  test_mcp_cache_stability.py  test_mcp_real_training.py  test_memory.py  test_paper_attacks.py  test_paper_attacks_nightly.py  test_partition.py  test_readme_claims.py  test_strategy.py  test_training.py
tests/bench/: conftest.py  test_round_speed.py
vfl-core/: Cargo.toml
vfl-core/src/: lib.rs  security.rs  strategy.rs
