[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "velocity-fl"
version = "0.1.0"
description = "The 'uv' of Federated Learning — high-performance, Rust-backed FL orchestration"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # numpy is now a hard runtime dep: the PyO3 extension returns weight
    # dicts as numpy arrays (zero-copy buffer protocol) rather than
    # Python float lists. Float wheels are ~15 MB so the footprint cost
    # is negligible; the benefit is O(layers) marshaling instead of
    # O(params). See IMPL.md and docs/benchmarks.md.
    "numpy>=2.4.6",
    "prefect>=3.7.2",
    "pydantic>=2.13.4",
    "typer>=0.25.1",
]

[project.optional-dependencies]
hf = [
    "transformers>=5.0",
    "peft>=0.10",
    # datasets 4.x dropped loading-script datasets for Parquet-backed
    # standard formats; vFL loads canonical Parquet mirrors (ylecun/mnist,
    # uoft-cs/cifar10) so the removal doesn't bite. 4.x also rides the
    # huggingface-hub 1.x line that transformers 5 requires.
    "datasets>=4.0",
    "safetensors>=0.4",
]
torch = [
    "torch>=2.12.0",
    "torchvision>=0.15",
]
# Agentic surface: FastMCP server exposing vFL tools over MCP.
# research(2026-05): pinned to fastmcp[apps]>=3.2 — the `apps` extra pulls
# in prefab-ui (~1.8 MiB wheel) so list-returning tools (`list_runs`,
# `run_rounds_history`, `memory_ledger`, `compare_runs`) can render in
# Claude's UI as DataTable / LineChart instead of raw JSON. FastMCP 3.2 is
# where Prefab support landed natively (`from fastmcp.apps import ...`).
# Direct `prefab-ui` pin per the May 2026 FastMCP Apps docs — prefab-ui is
# pre-1.0 and patch releases routinely break component APIs; rely on the
# transitive constraint and you'll get bitten on a Bulyan-scale dep update.
agent = [
    "fastmcp[apps]>=3.3.1",
    "prefab-ui>=0.20.1,<0.21",
]
# Differential privacy: Opacus PrivacyEngine for DP-SGD client training.
# research(2026-05): Opacus 1.6 is the canonical PyTorch DP-SGD path (Fed-BioMed
# FL reference); capped below 2.0 since a major bump could shift the
# make_private / accountant API. torch stays CPU-only via [tool.uv.sources].
dp = [
    "opacus>=1.6,<2",
]
all = [
    "velocity-fl[hf,torch,dp]",
]

[dependency-groups]
dev = [
    "maturin>=1.13.3,<2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.152.9",
    "ruff>=0.15.14",
    "ty>=0.0.39,<0.1",
    "zensical",
    "fastmcp[apps]>=3.3.1",
    "prefab-ui>=0.20.1,<0.21",
    "pytest-codspeed>=5.0.3",
    "opacus>=1.6,<2",
]

[project.scripts]
velocity = "velocity.cli:app"

# Route torch + torchvision through PyTorch's CPU-only wheel index. Avoids
# pulling ~2 GB of NVIDIA CUDA wheels (cublas, cudnn, cufft, cusolver, nccl,
# triton, etc.) on CPU-only CI runners and on local CPU dev machines. The
# `explicit = true` flag scopes this index to packages listed in
# `tool.uv.sources` -- everything else still resolves from PyPI.
# https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.maturin]
manifest-path = "vfl-core/Cargo.toml"
python-source = "python"
module-name = "velocity._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "nightly: real-dataset paper-scenario tests; gated by --run-nightly (run nightly via .github/workflows/nightly.yml).",
]
# Benches live under tests/bench/ and are collected only when explicitly
# pointed at (e.g. `pytest tests/bench/`); normal `pytest` skips them so
# the default test run stays fast. The rest of this list restores pytest's
# built-in defaults (which `norecursedirs` replaces rather than extends)
# so hypothesis, build artifacts, and caches aren't collected.
norecursedirs = [
    "bench",
    ".hypothesis",
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "node_modules",
    "__pycache__",
    "*.egg-info",
]

[tool.coverage.run]
source = ["velocity"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ty.src]
include = ["python"]

[tool.ty.analysis]
# Torch + Hugging Face `datasets` are optional extras (`velocity-fl[torch,hf]`);
# baseline `uv sync` prunes them. When installed, ty resolves real types.
allowed-unresolved-imports = [
    "torch",
    "torch.**",
    "torchvision",
    "torchvision.**",
    "datasets",
    "datasets.**",
]
