[package]
name = "vfl-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for VelocityFL federated learning orchestration"
license = "MIT"

[lib]
name = "vfl_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
rand_distr = "0.6"

[dev-dependencies]
approx = "0.5"
divan = { package = "codspeed-divan-compat", version = "4" }
proptest = "1"

[[bench]]
name = "aggregate"
harness = false
